# KANet

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
examples/: lbfgs_train.py  pruning_example.py  visualization_example.py
src/kanet/core/: bspline.py  kanet.py  layer.py
src/kanet/training/: __init__.py  pruning.py
src/kanet/utils/: __init__.py  phi.py  visualization.py
tests/: test_bspline.py
